# Pull-request-videos

./: .gitignore  AGENTS.md  CLAUDE.md  PLANS.md  README.md  docker-compose.agent.yml  docker-compose.observability.yml
.claude/: ralph-loop.local.md  settings.json
.github/: copilot-instructions.md
.harness/: baseline.json  feature_list.json
agents/: entropy-cleaner.md  planner.md  reviewer.md
backend/: __main__.py  main.py  pyproject.toml  pyrightconfig.json
backend/.hypothesis/constants/: 1d478fd70a8da6dd  22119ecbd3a1e390  482c5f600c765667  63fc5214d09da760  69c25093b3276e88  97f7948be877f821  bf1b6bcdb2cdcc7a  c0840044d47f5622  da39a3ee5e6b4b0d  f5f0723400b0f531
backend/.hypothesis/tmp/: tmp044bgrj8  tmp2e64777g  tmp5740535t  tmp6yxuekt9  tmp7x7i88ke  tmp81pfn0kq  tmp8z9w_8e7  tmpb0pmtgk9  tmpf2m4qpto  tmpmq4bwa7b  tmpo2gupkry  tmpr5uuv8w1
backend/config/: settings.py
backend/models/: agent.py  artifact.py  video.py
backend/routers/: agent.py  control.py  health.py  video.py
backend/services/: agent_brain.py  artifact.py  assembler.py  control_plane.py  gateway.py  github_pr.py  interaction.py  narrator.py  pipeline.py  recorder.py  sandbox.py  screen_capture.py
backend/tests/: test_agent_router.py  test_health.py
backend/tests/services/: test_agent_brain.py  test_agent_models.py  test_artifact.py  test_assembler.py  test_control_plane.py  test_gateway.py  test_github_pr.py  test_interaction.py  test_narrator.py  test_pipeline.py  test_recorder.py  test_sandbox.py  test_screen_capture.py
docs/: DESIGN.md  PRODUCT_SENSE.md  README.md
(+34 files in other folders)
